rename repo: khmer-online-radio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ and open the template in the editor.
             <audio class="audioDemo" controls="controls" src="">              
             </audio>
 
-            <div role="main" class="ui-content">
+            <div data-role="main" class="ui-content">
                 <ul id="radioList" data-role="listview" class="station">
                     
                 </ul>
