--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ and open the template in the editor.
             <div data-role="content">
                 <p>Thanks for using our Khmer Radio Online application.</p>
                 <p>Please rate our application and visit our website for more information.</p>
-                <p><a href="http://www.essentialtutorial.com">Khmer Online Radio</a></p>
+                <p><a href="http://www.music4.info">Khmer Online Radio</a></p>
             </div>
 
         </div>
